@@ -1,5 +1,8 @@
 	--- 9.8.5rc1 released ---
 
+3360.	[bug]		isc-config.sh did not honour includedir and libdir
+			when set via configure. [RT #33345]
+
 3559.	[func]		Check that both forms of Sender Policy Framework
 			records exist or do not exist. [RT #33355]
 
